[package]
name = "syn-intel"
version = "7.0.1"
edition = "2021"
rust-version = "1.74"
description = "BPF policy engine for tcp_syn_stop"
license = "GPL-2.0-only"

[dependencies]
libbpf-rs  = "0.24"
libbpf-sys = { version = "1.6", features = ["vendored-zlib"] }
clap       = { version = "4.5", features = ["derive"] }
rusqlite   = { version = "0.31", features = ["bundled"] }
lru        = "0.12"
anyhow     = "1.0"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
log         = "0.4"
env_logger  = "0.11"
libc        = "0.2"
signal-hook = "0.3"

[lints.clippy]
unwrap_used = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
